// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A1.js 1`] = `
/**
 * @providesModule A
 * @flow
 */
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/**
 * @providesModule A
 * @flow
 */

`;

exports[`A3.js 1`] = `
// @flow

require('A');
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow

require("A");

`;

exports[`B1.js 1`] = `
/**
 * @flow
 */

require('B2');
require('B3');
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/**
 * @flow
 */

require("B2");
require("B3");

`;

exports[`B3.js 1`] = `
/**
 * @providesModule B3
 * @flow
 */

require('B2');
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/**
 * @providesModule B3
 * @flow
 */

require("B2");

`;
